--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -16,15 +16,12 @@
         <activity
             android:name=".Principal"
             android:label="@string/app_name" >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
         <activity
             android:name=".LoginActivity"
-            android:label="@string/title_activity_login" >
+            android:label="@string/title_activity_login" ><intent-filter>
+                <category android:name="android.intent.category.LAUNCHER" /><action android:name="android.intent.action.MAIN" />
+            </intent-filter>
         </activity>
     </application>
 
